Add logo for f2l and create hover mod for this

--- a/Cube/Cube.vcxproj
+++ b/Cube/Cube.vcxproj
@@ -134,6 +134,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="Interface.cpp" />
     <ClCompile Include="Main.cpp" />
   </ItemGroup>
   <ItemGroup>
