Add sound for hover mod

--- a/Cube/Cube.vcxproj
+++ b/Cube/Cube.vcxproj
@@ -147,6 +147,9 @@
       <DependentUpon>Main.h</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
+  <ItemGroup>
+    <Media Include="Data\Sounds\hoverLogo.wav" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
