--- a/Cube/Cube.vcxproj.filters
+++ b/Cube/Cube.vcxproj.filters
@@ -29,4 +29,7 @@
   <ItemGroup>
     <Media Include="Data\Sounds\hoverLogo.wav" />
   </ItemGroup>
+  <ItemGroup>
+    <Image Include="logo_f2l.Image.jpg" />
+  </ItemGroup>
 </Project>
