--- a/Cube/Cube.vcxproj
+++ b/Cube/Cube.vcxproj
@@ -151,7 +151,7 @@
     <Media Include="Data\Sounds\hoverLogo.wav" />
   </ItemGroup>
   <ItemGroup>
-    <Image Include="logo_f2l.Image.jpg" />
+    <Image Include="Data\Images\logo_f2l.Image.jpg" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
