--- a/Cube/Cube.vcxproj.filters
+++ b/Cube/Cube.vcxproj.filters
@@ -30,6 +30,6 @@
     <Media Include="Data\Sounds\hoverLogo.wav" />
   </ItemGroup>
   <ItemGroup>
-    <Image Include="logo_f2l.Image.jpg" />
+    <Image Include="Data\Images\logo_f2l.Image.jpg" />
   </ItemGroup>
 </Project>
